11-ssm/modules/addons/helmconfig/nginx-ingress-setup.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend
  namespace: roboshop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frontend-dev-test.mikeydevops1.online
      secretName: my-app-tls  # cert-manager will create/renew this
  rules:
    - host: frontend-dev-test.mikeydevops1.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
